# mcp-hs

./: .gitignore  CHANGELOG.md  Eff1.hs  LICENSE  README.md  index.html  mcp-srv-hs.cabal
app/: Main.hs
lib/: FFree.hs  JsonRpc.hs  JsonSchema.hs  Mcp.hs  MyLib.hs  TestApp.hs  TestMcpApp.hs  Util.hs
lib/JsonRpc/: AppT.hs  NoJSON.hs  Rpc.hs  StdIO.hs  Types.hs  Wai.hs
lib/Mcp/: Types.hs
lib/Util/: CologErr.hs
test/: Main.hs
test/JsonRpc/: TestNoJSON.hs  TestStdIO.hs
